<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dialog.TaskDialog">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taskset"
        android:id="@+id/tv_taskSet"
        android:layout_alignParentTop="true"
        android:typeface="monospace"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taskName"
        android:id="@+id/tv_taskName"
        android:layout_marginTop="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ed_taskName"
        android:layout_below="@+id/tv_taskName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taskScore"
        android:id="@+id/tv_taskScore"
        android:layout_below="@+id/ed_taskName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etn_taskScore"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tv_taskScore" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="确定添加"
        android:id="@+id/btn_okaTaskAdd"
        android:layout_below="@+id/etn_taskScore"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="取消操作"
        android:id="@+id/btn_cancelTaskAdd"
        android:layout_below="@+id/etn_taskScore"
        android:layout_alignRight="@+id/etn_taskScore"
        android:layout_alignEnd="@+id/etn_taskScore" />


</RelativeLayout>
